# src/app/core/api/stingify/models/amount-dto.ts
@@ -15,4 +15,5 @@ export interface AmountDto {
   description?: string;
   insertionTimestamp?: string;
   planned?: number;
+  recurringAmountId?: number;
 }
